# evox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTEXT.md  LICENSE  MANIFEST.in  MUJOCO_LOG.TXT  README.md  README_ZH.md  ale-py.nix  auto-rom.nix  dev_env_builder.nix  example.py  extra-build-requirements.txt  fhs.nix  flake.nix  generic.nix  main_neuroevolution_yanchenli.py  pyproject.toml  temp.ipynb  test.py  win-install.bat
.github/: pull_request_template.md
.github/workflows/: discord-bot.yml  python-package.yml  python-publish.yml  ruff-check.yml
benchmarks/: CONTEXT.md  _repro_virtual_es_e2e.py  benchmark_virtual_lora_es.py  pso.py  test_base.py  utils.py
docs/: CONTEXT.md  fix_notebook_translation.py  fix_output.py  machine_translate.py
docs/source/: CONTEXT.md  _config.yml  conf.py  index.md  index.rst
docs/source/_static/: evox.css  (+7 more)
evox/: utils.py
evox/algorithms/: __init__.py
evox/core/: algorithm.py  module.py  state.py
evox/monitors/: __init__.py  fitness.py  gym.py
evox/operators/: non_dominated_sort.py
evox/pipelines/: __init__.py  distributed.py  standard.py
evoxlib/: __init__.py  algorithm.py  module.py  problem.py  utils.py
evoxlib/algorithms/: __init__.py
evoxlib/core/: algorithm.py  module.py  operator.py  problem.py  state.py
evoxlib/monitors/: __init__.py  fitness.py  population.py
evoxlib/operators/: __init__.py  crowding_distance_sort.py  non_dominated_sort.py  proto.py  uniform_point.py
evoxlib/pipelines/: __init__.py  adapter.py  distributed.py  standard.py
evoxlib/problems/: __init__.py
examples/: cmaes_acrobot.py  cmaes_classic_control.py  cmaes_mountain_car.py  cso_ackley.py  cso_acrobot.py  cso_mountain_car.py  custom_genetic_algorithm.py  custom_problem_onemax.py  distributed_benchmark.py  pgpe_acrobot.py  pgpe_mountain_car.py  pgpe_pong.py  pso_ackley.py  pso_rastrigin.py  scale_benchmark.py
requirements/: docs-requirements.txt  test-requirements.txt
src/algorithms/: __init__.py  clpso.py  cso.py  dms_pso_el.py  fips.py  fs_pso.py  pso.py  rvea.py  sl_pso_gs.py  sl_pso_us.py  swmmpso.py  topology_utils.py  utils.py
src/core/: __init__.py  _vmap_fix.py  algorithm.py  components.py  jit_util.py  module.py  monitor.py  problem.py  workflow.py
src/evox/: CONTEXT.md  __init__.py  utils.py
src/evox_ext/: CONTEXT.md  autoload_ext.py
src/metrics/: __init__.py  igd.py
src/operators/: __init__.py  gird.py  latin_hypercube.py  pm_mutation.py  rvea_selection.py  sbx.py  uniform.py
src/problems/: __init__.py  dtlz.py  hpo_wrapper.py
src/utils/: __init__.py  common.py  control_flow.py  jit_fix_operator.py  module_and_vector.py  parameters_and_vector.py  while_loop.py
src/workflows/: __init__.py  eval_monitor.py  std_workflow.py
test_lh/: lsmop.py  maf.py  t1.py  test.py
tests/: gym_env_test.py  test.py  test_classic_problems.py  test_clustered_cso.py  test_cma-es.py  test_containers.py  test_crowding_distance.py  test_cso.py  test_de.py  test_distributed_pipeline.py  test_envpool.py  test_evolutionary_strategies.py  test_evoxbench.py  test_gaussian_process.py  test_gym.py  test_ibea.py  test_lsmop.py  test_maf.py  test_metrics.py  test_moead.py  test_monitors.py  test_multi_objective_algorithms.py  test_nes.py  test_neuroevolution.py  test_non_dominated_sort.py  test_nsga2.py  test_open-es.py  test_pgpe.py  test_pso.py  test_rvea.py  test_single_objective_algorithms.py  test_state.py  test_surrogate_workflow.py  test_test_suit.py  test_uni_workflow.py  test_utils.py  test_workflows.py
tests/maze/: maze_so.py  maze_so_easy.py  test_model.py  try_maze_env.py
tests/mujoco_envs/: Ant.py  Ant_multiobject.py  MuJoCo_mo.py  MuJoCo_so.py  Normalizer.py  VirtualBatchNorm.py  evaluate_agent.py  learn_pgpe.py
tests/test_lh/: __init__.py  lsmop.py  maf.py  t1.py  test.py  test_lsmop.py  test_maf.py
tests/visualize/: test_brax.py  test_gym.py
unit_test/: CONTEXT.md  test_triton_kernels.py
unit_test/algorithms/: test_base.py  test_clpso.py  test_cso.py  test_de_variants.py  test_dms_pso_el.py  test_es_variants.py  test_fips.py  test_fs_pso.py  test_moea.py  test_pso.py  test_pso_variants.py  test_rvea.py  test_sl_pso_gs.py  test_sl_pso_us.py  test_swmmpso.py
unit_test/core/: test_index_fix.py  test_jit_util.py  test_module.py  test_vmap_fix.py
unit_test/operators/: test_non_dominate.py  test_rvea_selection.py  test_sbx_and_pm.py
unit_test/problems/: CEC2022_by_P_N_Suganthan.py  CONTEXT.md  test_basic.py  test_basic_problem.py  test_basic_problems.py  test_brax.py  test_cec2022.py  test_dtlz.py  test_hpo_wrapper.py  test_maf.py  test_meta.py  test_meta2.py  test_mujoco.py  test_rvea.py  test_supervised_learning.py  test_zdt.py
unit_test/triton_kernels/: test_lora_noise.py  test_philox.py  test_virtual_lora_es.py  test_virtual_noise.py
unit_test/utils/: test_control_flow.py  test_jit_fix.py  test_parameters_and_vector.py  test_while.py
unit_test/workflows/: test_std_workflow.py  test_std_workflow_virtual.py
vbn_data/: Ant-v4.npy
(+14684 files in other folders)
