[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mypkg = ["*.txt", "*.json"]

[project]
name = "evox"
version = "0.9.0"
authors = [
  { name = "Bill Huang", email = "bill.huang2001@gmail.com" },
  { name = "Boqing Xu", email = "xuboqing123@gmail.com" },
  { name = "Christina Lee", email = "1315552992@qq.com" },
  { name = "Kevin Sun", email = "skk7757@163.com" },
  { name = "Yanchen Li", email = "48726053+liyc5929@users.noreply.github.com" },
  { name = "Zhenyu Liang", email = "zhenyuliang97@gmail.com" },
]
description = "evox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch >= 2.0",
]

[project.optional-dependencies]
vis = [
  "plotly >= 5.0.0",
  "pandas >= 2.0.0",
]

gymnasium = ["gymnasium >= 0.29.0"]

envpool = ["envpool >= 0.8.0"]

neuroevolution = [
  "brax >= 0.11.0",
]

[project.urls]
"Homepage" = "https://github.com/EMI-Group/evox"
"Bug Tracker" = "https://github.com/EMI-Group/evox/issues"
