[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "evox"
version = "1.1.2"
authors = [
  { name = "Bill Huang", email = "bill.huang2001@gmail.com" },
  { name = "Boqing Xu", email = "xuboqing123@gmail.com" },
  { name = "Christina Lee", email = "1315552992@qq.com" },
  { name = "Kevin Sun", email = "skk7757@163.com" },
  { name = "Yanchen Li", email = "48726053+liyc5929@users.noreply.github.com" },
  { name = "Zhenyu Liang", email = "zhenyuliang97@gmail.com" },
]
description = "evox"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "torch >= 2.6.0",
]

[project.optional-dependencies]
vis = [
  "plotly >= 5.0.0",
  "pandas >= 2.0.0",
]

neuroevolution = [
  "torchvision >= 0.16.0",
  "brax >= 0.12.0",
]

test = [
  "torchvision >= 0.16.0",
  "brax >= 0.12.0",
  "plotly >= 5.0.0",
]

docs = [
  "sphinx-book-theme > 1.0",
  "sphinx-autodoc2",
  "sphinx",
  # Use the nightly version of MyST-NB (in extra-build-requirements.txt), https://github.com/executablebooks/MyST-NB/pull/600
  "nbsphinx",
  "myst-parser[linkify]",
  "sphinx_copybutton",
  "sphinx_design",
  "sphinx-favicon",
  "sphinxcontrib-mermaid",
  "polib",
]

default = [
  "plotly >= 5.0.0",
  "pandas >= 2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/EMI-Group/evox"
"Bug Tracker" = "https://github.com/EMI-Group/evox/issues"

[tool.ruff]
# Allow lines to be as long as 128. (default: 88)
line-length = 128
# Use `\n` line endings for all files
format.line-ending = "lf"
# F: Pyflakes / E, W: pycodestyle / I: isort / NPY: numpy
lint.select = ["F", "E", "W", "I", "NPY"]
lint.ignore = ["E501"] # Ignore line length error
lint.per-file-ignores = {"*.ipynb" = ["I001"], "src/evox/__init__.py" = ["I001"]}